plugins {
    id 'com.android.library'
    id 'com.google.dagger.hilt.android'
    id 'com.google.gms.google-services'
}

android {
    namespace 'com.scanner.datasync'
    compileSdk 34

    defaultConfig {
        minSdk 29
        targetSdk 34

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {

    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.2'
    testImplementation 'junit:junit:4.13.2'
    implementation 'androidx.appcompat:appcompat:1.6.0'
    implementation 'com.google.android.material:material:1.8.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    /////TODO биботека для службы WOrk Manager
    implementation 'androidx.work:work-runtime:2.9.1'
    implementation 'androidx.work:work-runtime-ktx:2.9.1'
    testImplementation 'androidx.work:work-testing:2.9.1'
    implementation "androidx.work:work-multiprocess:2.9.1"


    implementation "androidx.startup:startup-runtime:1.1.1"

//TODO HINT Dagger2

    implementation 'com.google.dagger:hilt-android:2.44'
    annotationProcessor 'com.google.dagger:hilt-compiler:2.44'

    // For instrumentation tests
    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.44'
    androidTestAnnotationProcessor 'com.google.dagger:hilt-compiler:2.44'

    // For local unit tests
    testImplementation 'com.google.dagger:hilt-android-testing:2.44'
    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.44'



    //TODO работа с сетью
    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    //TODO jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.14.2'




    ///TODO RXJAVA BLE
    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
    implementation group: 'io.reactivex', name: 'rxandroid', version: '1.2.1'

}